Updated to 1.21.10 Added a gui to the /trade command for selecting a player Migrated to BorisLib, improving visuals in GUIs and configs